yair-io/tests/lit/mod/bad_quoted.ya
// RUN: @yair_as @file --color never 2>&1 || echo 0

// CHECK: error: Expected string identifier for module name
mod "🎄 {}
